# Embedded-Operating-Systems---Project

./: README.md  sharefiles.sh  ssh-rpi.sh
Acionamento_Portao/: CMakeList.txt  Driver_GPIO.c  Driver_GPIO.h  Ex2.c  Ex7.c  Makefile  README.md  Rasp-test.txt  control_activation.c  gpio_dev_mem.c  gpio_dev_mem.h  gpio_sysfs.c
Cadastro_Veiculo/: CMakeCache.txt  Makefile  cmake_install.cmake  install-opencv.sh  lerImagem  lerImagem.cpp
Identificacao_Veiculo/: CMakeCache.txt  CMakeLists.txt  DetectChars.cpp  DetectChars.h  DetectPlates.cpp  DetectPlates.h  Main.cpp  Main.h  Main_Cadastro.cpp  Main_ControleRemoto.cpp  Main_ident_placa.cpp  Makefile  PossibleChar.cpp  PossibleChar.h  PossiblePlate.cpp  PossiblePlate.h  Preprocess.cpp  Preprocess.h  README.md  classifications.xml  cmake_install.cmake  identificar_placa.cpp  identificar_placa.h  identificar_placa.txt  images.xml  placas_cadastradas.txt  placas_ident.depend  placas_ident.layout  projeto_final.cbp  projeto_final.depend  projeto_final.layout  relatorio.txt
Transmissao_Video/: Streaming.cpp
